# SimpleHarness

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .vale.ini  CHANGELOG.md  CLAUDE-local.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  compose.yml  config.yaml  core-coverage.ini  dev-container.md  harness.py  intent.md  pyproject.toml  simpleharness_approver_hook.py  simpleharness_approver_hook.sh  simpleharness_approver_mcp.py  simpleharness_core.py  skills-for-improving-simpleharness.md  skills-for-simpleharness-workflow.md
.claude/: settings.json
.claude/agents/: expert-critic.md
.codesight/: CODESIGHT.md  config.md  libs.md
.codesight/wiki/: index.md  log.md  overview.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/repos/bugfix-retry-logic/: TASK.md  benchmark-meta.yaml  pyproject.toml  retry.py  test_retry.py
benchmarks/repos/feature-cli-json/: TASK.md  benchmark-meta.yaml  pyproject.toml  report.py  test_report.py
docs/: dev-container-usage.md  dev-container.md  intent.md  skills-for-simpleharness-workflow.md  usage.md
docs/superpowers/plans/: 2026-04-10-fastify-test-devcontainer.md
docs/superpowers/specs/: 2026-04-10-fastify-test-devcontainer-design.md
roles/: approver.md  brainstormer.md  developer.md  expert-critic.md  plan-writer.md  project-leader.md
scripts/: check_deal_runtime.py  check_fp_purity.py  ci-local.sh  entrypoint.sh  launch.sh  mutmut-wsl.sh
simpleharness/memory/: WORKSITE.md
simpleharness/tasks/001-design-dev-container-for-safe-bypass-permissions-execution/: .session_prompt.md  00-kickoff.md  FINAL.md  STATE.md  TASK.md
simpleharness/tasks/002-create-container-artifacts-for-dev-container/: .session_prompt.md  00-kickoff.md  01-brainstorm.md  02-plan.md  03-develop.md  04-review.md  FINAL.md  NEEDS_REFINEMENT.md  STATE.md  TASK.md
simpleharness/tasks/003-implement-cli-error-classifier-and-retry-backoff-for-unatten/: .session_prompt.md  00-kickoff.md  01-brainstorm.md  02-plan.md  02-plan_writer.md  03-develop.md  04-review.md  FINAL.md  STATE.md  TASK.md
simpleharness/tasks/004-document-dev-container-setup-and-usage/: .session-settings.json  .session_prompt.md  00-kickoff.md  FINAL.md  NEEDS_REFINEMENT.md  STATE.md  TASK.md
src/simpleharness/: __init__.py  approver_core.py  approver_shell.py  benchmark.py  benchmark_core.py  config.yaml  core.py  io.py  process.py  session.py  shell.py  simpleharness_approver_hook.sh  transcript.py  ui.py
src/simpleharness/hooks/: __init__.py  enforce_must_use.py  inform_skills.py
src/simpleharness/roles/: approver.md  benchmark-analyst.md  brainstormer.md  ceo.md  deployment-engineer.md  developer.md  documentation-writer.md  local-builder.md  local-critic.md  local-reviewer.md  local-worker.md  plan-writer.md  project-leader.md
src/simpleharness/workflows/: feature-build-hybrid.md  feature-build-local.md
subagents/: expert-critic.md
tests/: conftest.py  test_approver_core.py  test_benchmark_core.py  test_config_skills.py  test_core.py  test_enforce_must_use.py  test_inform_skills.py  test_property.py  test_role_and_subagent_loading.py  test_session_wiring.py  test_skills.py  test_transcript.py
workflows/: feature-build.md  universal.md
